--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -10,8 +10,8 @@
     <header>
     <nav>
         <a href="index.html">Home</a>,
-        <a href="wwr/index.html">White Water Rafting Website</a>,
-        <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>,
+        <a href="wrr/index.html">White Water Rafting Website</a>,
+        <a href="wrr/site-plan-rafting.html">White Water Rafting Siteplan</a>,
         <a href="positioning.html">Positioning Activity</a>,
         <a href="#">Personal Website</a>,
         <a href="#">Personal Siteplan</a>,
