--- a/wdd130/aboutme/index.html
+++ b/wdd130/aboutme/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD130 | Home</title>
     <link href="" >
-    <link rel="https://mayes007.github.io/wdd130/wrr/href" >
 </head>
 <body>
     <header>
     <nav>
+         <link rel="https://mayes007.github.io/wdd130/wrr/" >
         <a href="index.html">Home</a>,
         <a href="wrr/index.html">White Water Rafting Website</a>,
         <a href="wrr/site-plan-rafting.html">White Water Rafting Siteplan</a>,
