--- a/byui/byui.html
+++ b/byui/byui.html
@@ -7,10 +7,10 @@
 <body>
     <header>
         <nav>
-            <a id="active" href="byui.html">Home</a>
-            <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
-            <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
-            <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
+            <a id="active" href="byui.html">Home</a>,
+            <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>,
+            <a href="https://www.churchofjesuschrist.org/temples">Temples</a>,
+            <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>,
         </nav>
     </header>
     <main>
