--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -11,8 +11,8 @@
     <nav>
          <link rel="https://mayes007.github.io/wdd130/wrr/" >
         <a href="index.html">Home</a>,
-        <a href="wrr/index.html">White Water Rafting Website</a>,
-        <a href="wrr/site-plan-rafting.html">White Water Rafting Siteplan</a>,
+        <a href="https://mayes007.github.io/wdd130/wrr/index.html">White Water Rafting Website</a>,
+        <a href="https://mayes007.github.io/wdd130/wrr/site-plan-rafting.html">White Water Rafting Siteplan</a>,
         <a href="positioning.html">Positioning Activity</a>,
         <a href="#">Personal Website</a>,
         <a href="#">Personal Siteplan</a>,
