--- a/ice5.html
+++ b/ice5.html
@@ -1,12 +1,27 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Webpage with images</title>
-        <link rel="stylesheet" href="styles/ice5.css">
-    </head>
-    <body>
-        <nav>
-            <a href=""
-        </nav>
-    </body>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Circular Images with Words</title>
+</head>
+<body>
+  <div class="container">
+    <div class="background-image">
+      <img src="images/circles.jpg">
+
+      <div class="circle-image">
+        <img src="images/desk.jpg" alt="Desk Image">
+      </div>
+      <div class="circle-image">
+        <img src="images/graphic.png" alt="Graphic Image">
+      </div>
+      <div class="circle-image">
+        <img src="/images/person.jpg" alt="Person Image">
+      </div>
+    </div>
+  </div>
+</body>
 </html>
+
