--- a/positioning.html
+++ b/positioning.html
@@ -4,6 +4,7 @@
     <!-- HTML - Name: positioning.html -->
     <title>Positioning Activity</title>
     <link rel="stylesheet" type="text/css" href="positionstyles.css" />
+    <link rel="stylesheet" href="mayes007.github.io/wdd130/prosition.html">
   </head>
   <body>
     <div class="activity">
