--- a/index1.html
+++ b/index1.html
@@ -6,7 +6,7 @@
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+            <img class="logo" src="wwr/images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -29,22 +29,22 @@
     </div>
     <main class="home-grid">
         <section class="rivers-card">
-            <img class="card-img" src="wwr/images/" alt="river in forest">
-            <img class="icon" src="images/river_icon.png" alt="river icon">
+            <img class="card-img" src="wwr/images/rivers.jpg" alt="river in forest">
+            <img class="icon" src="wwr/images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class ="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/fire_icon.png" alt="fire icon">
+            <img class ="card-img" src="wwr/images/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="wwr/images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
-            <img class="icon" src="images/oars.png" alt="oars icon">
+            <img class="card-img" src="wwr/images/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="wwr/images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
         <div id="background"></div>
-        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+        <img class="mountains" src="wwr/images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
@@ -52,18 +52,18 @@
         </section>
     </main>
     <footer>
-        <p>Dry Oar © 20XX - Your First and Last Name Here</p>
+        <p>Dry Oar © 2023 - Samantha Mayes</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="fb icon">
+                <img src="wwr/images/facebook.png" alt="FaceBook icon">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
+                <img src="wwr/images/twitter.png" alt="Twitter icon">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
+                <img src="wwr/images/instagram.png" alt="Instagram icon">
             </a>
         </div>
     </footer>
