--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -10,7 +10,7 @@
 
   <body>
     <header>
-      <h1>How Anikan Skywalker is the Chosen One. Site Plan</h1>
+      <h1>How Anikan Skywalker is the Chosen One Site Plan</h1>
       <h2>Samantha Mayes</h2>
       <h2>WDD 130-01</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
