--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -139,7 +139,7 @@
       </p>
       <p>Images for the Page 2</p>
         <img src="image/Anakin-Skywalker-790x459-1.webp" alt="image for Page2">
-        <img src=""  alt="image for page2">
+        <img src="image/2dec3a78a0a562965cccbd8e3fc6f53a.jpg"  alt="image for page2">
        
 
       </ul>
@@ -149,7 +149,7 @@
       </p>
       <p>Images for the Page 3</p>
         <img src="image/download (1).jpeg" alt="image for page 3">
-        <img src=""    alt="image for page 3">
+        <img src="image/images.jpeg"    alt="image for page 3">
         
     </ul>
     <h4>[Page 4]</h4>
@@ -158,7 +158,7 @@
       </p>
       <p>Images for The Page 4</p>
       <img src="image/download (2).jpeg" alt="image for page 4">
-      <img src=""   alt="image for page 4">
+      <img src="image/download (3).jpeg"   alt="image for page 4">
 
       </ul>
       <hr>
