--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -125,7 +125,7 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        This website is gonna go through Anikan Skywalkers Timeline when he was a kids to when he becomes Dark Vader
+        The Home page of this website serves as the gateway to an extensive exploration of Anikan SKywalker's life. It spans his entire timeline, from a young, innocent child to his eventual transformation into the formidable Darth Vader. This page introduces the website overarching narrative, offering a tantalizing preview of the journey ahead. It promises a comprehensive dive into the life of one of Star Wars' most iconic characters. Users can expect to uncover the pivotal moments that define Anakin's path, both visually and through engaging content. This page is adorned with two intriguing images, setting the tone for the captivating story that follows.
       </p>
       <p>Images for the Home page</p>
         <img src="image/download.jpeg" alt="image for homepage">
@@ -135,7 +135,8 @@
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        This Page here is gonna be about Anikan's younger years.
+       Page 2 takes a focused look at Anakin Skywalker's formative years. It delves into his early life, offering insight into his humble beginnings, dreams, and the circumstances that molded the young Jedi-to-be. Through engaging content and captivating imagery, this page provides a nostalgic trip through Anakin's childhood, allowing visitors to connect with the innocence and curiosity that defined him during his younger years. From his pod-racing adventures on Tatooine to his dreams of a better life, this page paints a vivid picture of the young Anakin's world. Two images accompany the narrative, bringing to life the experiences and challenges that set the stage for his remarkable destiny.
+
       </p>
       <p>Images for the Page 2</p>
         <img src="image/Anakin-Skywalker-790x459-1.webp" alt="image for Page2">
@@ -145,7 +146,8 @@
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [This page will go through anikans apprentence years.]
+        Page 3 is dedicated to Anakin's apprenticeship, offering a detailed exploration of his training and growth as a Jedi. This phase of his life is pivotal in his journey towards becoming a legendary figure in the Star Wars saga. The page delves into the challenges, triumphs, and mentors that shaped Anakin's path, providing a comprehensive understanding of the training that would ultimately define his character. Accompanied by vivid images, it allows visitors to relive the training and trials Anakin faced, including his interactions with notable characters like Obi-Wan Kenobi and Yoda. This section immerses users in Anakin's evolving relationship with the Force and showcases the pivotal moments that paved the way for his destiny.
+
       </p>
       <p>Images for the Page 3</p>
         <img src="image/download (1).jpeg" alt="image for page 3">
@@ -154,7 +156,7 @@
     </ul>
     <h4>[Page 4]</h4>
       <p>
-        This page is gonna be about Anikan later years when he turns to the dark side.
+        Page 4 is a gripping exploration of the momentous turning point in Anakin's life when he succumbs to the allure of the dark side and becomes Darth Vader. The page delves deep into the events, emotions, and choices that led to this dramatic transformation. Through compelling content and dramatic imagery, it immerses visitors in the darkness that shrouds Anakin's later years. This section offers a powerful examination of the inner conflict and external forces that drive Anakin's descent into one of the most iconic villains in cinematic history. The two images featured on this page capture the ominous and menacing presence that Darth Vader embodies, providing a visually striking portrayal of this critical juncture in Anakin's life.
       </p>
       <p>Images for The Page 4</p>
       <img src="image/download (2).jpeg" alt="image for page 4">
