--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -164,7 +164,7 @@
 
       <h5>[Page 5-Quotes and Memorable moments of Anikan Skywalker:</h5>
         <p>
-          Page 5, titled "Quotes and Memorable Moments of Anakin Skywalker," is dedicated to revisiting some of the most iconic and unforgettable quotes and moments from Anakin's life. This page offers fans a chance to relive the powerful dialogues and impactful scenes that have made Anakin Skywalker a beloved and enduring character in the Star Wars universe. While no content is provided here, this page is intended to feature quotes and images that encapsulate the essence of Anakin's character and his journey.
+          Page 5, "Quotes and Memorable Moments of Anakin Skywalker," revisits the most iconic and unforgettable quotes and scenes from Anakin's life. This page allows fans to relive the powerful dialogues and impactful moments that have solidified Anakin Skywalker as a beloved character in the Star Wars universe. While no content is provided here, this page is intended to feature quotes and images that encapsulate the essence of Anakin's character and his journey, providing fans with a nostalgic trip through some of the most memorable aspects of Anakin's story.
         </p>
         <img src="image/28867d903738e22edd1ef89033e90d54.jpg" alt="image for page 5">
         <img src="image/images (1).jpeg" alt="image for page 5">
