--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -90,34 +90,44 @@
         <a href="#">Home</a>
         <a href="#">Page2</a>
         <a href="#">Page3</a>
+        <a href="#">Page4</a>
+        <a href="#">Page5</a>
       </nav>
       <hr>
-      <h2>
-        Site Map
-      </h2>
-      <div class="sitemap">
-        <div class="sm-home">
-          Home
-        </div>
-        <div class="sm-page2">
-          [Page2] <!-- change this -->
-        </div>
-        <div class="sm-page3">
-          [Page3]  <!-- change this -->
-        </div>
-
-        <div class="top">
-          &nbsp;
-        </div>
-        <div class="left">
-          &nbsp;
-        </div>
-        <div class="right">
-          &nbsp;
-        </div>
-
+      Site Map
+    </h2>
+    <div class="sitemap">
+      <div class="sm-home">
+        Home
       </div>
-
+      <div class="sm-page2">
+        [Page2] <!-- change this -->
+      </div>
+      <div class="sm-page3">
+        [Page3]  <!-- change this -->
+      </div>
+      <div class="sm-page4">
+        [Page4]
+      </div>
+      <div class="sm-page5">
+        [Page5]
+      </div>
+      <div class="top">
+        &nbsp;
+      </div>
+      <div class="top">
+        &nbsp;
+      </div>
+      <div class="left">
+        &nbsp;
+      </div>
+      <div class="right">
+        &nbsp;
+      </div>
+      <div class="bottom">
+        &nbsp;
+      </div>
+    </div>
       <!-- --------Content Section -------------- -->
       <hr>
       <h2>
