--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -101,16 +101,16 @@
         Home
       </div>
       <div class="sm-page2">
-        [Page2] <!-- change this -->
+        Page2 <!-- change this -->
       </div>
       <div class="sm-page3">
-        [Page3]  <!-- change this -->
+        Page3  <!-- change this -->
       </div>
       <div class="sm-page4">
-        [Page4]
+        Page4  <!-- change this -->
       </div>
       <div class="sm-page5">
-        [Page5]
+        Page5 <!-- change this -->
       </div>
       <div class="top">
         &nbsp;
