--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -115,6 +115,7 @@
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
 
     <h3>[Page 2]</h3>
+    <img src="images/20231105_235218.jpg">
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
