--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -196,25 +196,31 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="image/20231111_133935.jpg" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="image/20231111_172900.jpg" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="image/20231111_183232.jpg" alt="page 3 wireframe">
 
       <h3>[Page 4]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [Any additional details about page 4 that the wireframe does not make clear]
       </p>
-      <img src="#" alt="page 4 wireframe">
+      <img src="image/20231111_211134.jpg" alt="page 4 wireframe">
+
+      <h3>[Page 5]</h3>
+      <p>         
+        [Any additional details about page 5 that the wireframe does not make clear]
+      </p>
+      <img src="image/20231111_213420.jpg" alt="page 5 wireframe">
     </main>
   </body>
 
