--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -187,7 +187,7 @@
       </ul>
       <hr>
       <h2>
-        Wireframesq
+        Wireframes
       </h2>
       <p>
         Create three wireframes for your site. One for each page and list them here</p>
