--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -196,31 +196,31 @@
       <p>         
         [Any additional details about home that the wireframe does not make clear]
       </p>
-      <img src="image/home page.jpg" alt="home page wireframe">
+      <img src="image/page1.jpg" alt="home page wireframe">
 
       <h3>[Page 2]</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="image/page2.jpg" alt="page 2 wireframe">
+      <img src="" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="image/page3.jpg" alt="page 3 wireframe">
+      <img src="" alt="page 3 wireframe">
 
       <h3>[Page 4]</h3>
       <p>         
         [Any additional details about page 4 that the wireframe does not make clear]
       </p>
-      <img src="image/page 4.jpg" alt="page 4 wireframe">
+      <img src="" alt="page 4 wireframe">
 
       <h3>[Page 5]</h3>
       <p>         
         [Any additional details about page 5 that the wireframe does not make clear]
       </p>
-      <img src="image/page 5.jpg" alt="page 5 wireframe">
+      <img src="" alt="page 5 wireframe">
     </main>
   </body>
 
