--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -202,25 +202,25 @@
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
-      <img src="" alt="page 2 wireframe">
+      <img src="image/page2.1.jpg" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
-      <img src="" alt="page 3 wireframe">
+      <img src="image/page3.1.jpg" alt="page 3 wireframe">
 
       <h3>[Page 4]</h3>
       <p>         
         [Any additional details about page 4 that the wireframe does not make clear]
       </p>
-      <img src="" alt="page 4 wireframe">
+      <img src="image/page4.1.jpg" alt="page 4 wireframe">
 
       <h3>[Page 5]</h3>
       <p>         
         [Any additional details about page 5 that the wireframe does not make clear]
       </p>
-      <img src="" alt="page 5 wireframe">
+      <img src="image/page5.1.jpg" alt="page 5 wireframe">
     </main>
   </body>
 
