--- a/wwr/fun_facts_about_white_water_rafting.html
+++ b/wwr/fun_facts_about_white_water_rafting.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
+    <title>Fun Facts About White Water Rafting | Dry Oar Boating | page 2</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
@@ -21,13 +21,13 @@
     </header>
 
 <main>
-    <div class="gridcontainer">
-
-    </div>
-    .gridcontainer{
-     <display:grid
-        grid-template-columns:1fr 1fr 1fr;
-    }>
+ <section class="fun-facts">
+    <h2>Fun Facts About White Water Rafting</h2>
+    <p>White water rafting originated in the 1940s and gained popularity as an adventurous outdoor activity.
+    <p>ivers are classified from Class I (easy) to Class VI (extremely difficult and dangerous) based on the level of difficulty for rafting.</p>
+    <p>The International Scale of River Difficulty is a standardized system used worldwide to classify rivers for rafting.</p>
+    <p>Some of the world's most famous white water rafting rivers include the Colorado River in the Grand Canyon, the Zambezi River in Africa, and the Futaleufu River in Chile.</p>
+ </section>
 
 </main>
 
