--- a/wwr/images/index.html
+++ b/wwr/images/index.html
@@ -54,7 +54,7 @@
     <footer>
         <p>Dry Oar © 2023 - Samantha Mayes</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contactus.html">Contact Us</a></p>
+        <p><a href="contact_us.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
                 <img src="wwr/images/facebook.png" alt="FaceBook icon">
