--- a/wwr/images/index.html
+++ b/wwr/images/index.html
@@ -17,7 +17,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="wwr/images/hero.png" alt="People enjoying white water rafting">
+            <img id="hero-img" src="hero.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
@@ -54,16 +54,16 @@
     <footer>
         <p>Dry Oar © 2023 - Samantha Mayes</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
-        <p><a href="contact_us.html">Contact Us</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="wwr/images/facebook.png" alt="FaceBook icon">
+                <img src="facebook.png" alt="FaceBook icon">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="wwr/images/twitter.png" alt="Twitter icon">
+                <img src="twitter.png" alt="Twitter icon">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="wwr/images/instagram.png" alt="Instagram icon">
+                <img src="instagram.png" alt="Instagram icon">
             </a>
         </div>
     </footer>
