--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="logo.png" alt="Dry Oar Logo">
+            <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
@@ -21,7 +21,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="hero.png" alt="People enjoying white water rafting">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
@@ -33,25 +33,25 @@
     </div>
     <main class="home-grid">
         <section class="rivers-card">
-            <img class="card-img" src="rivers.jpg" alt="river in forest">
-            <img class="icon" src="river_icon.png" alt="river icon">
+            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+            <img class="icon" src="images/river_icon.png" alt="river icon">
             <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-            <img class="card-img" src="camping.jpg" alt="tent in mountains">
-            <img class="icon" src="fire_icon.png" alt="fire icon">
+            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="images/fire_icon.png" alt="fire icon">
             <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-            <img class="card-img" src="rapids.jpg" alt="rafting boat">
-            <img class="icon" src="oars.png" alt="oars icon">
+            <img class="card-img" src="images/rapids.jpg" alt="rafting boat">
+            <img class="icon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
-        <img class="mountains" src="mountains.jpg" alt="Misty mountains">
+        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
         <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-        <a class='join' href="rivers.html">Join Us</a>
+        <a class='join' href="fun_facts_about_white_water_rafting.html">Join Us</a>
     </section>
     </main>
     <footer>
@@ -60,13 +60,13 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="facebook.png" alt="facebook icon">
+                <img src="images/facebook.png" alt="facebook icon">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="twitter.png" alt="twitter icon">
+                <img src="images/twitter.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="instagram.png" alt="instagram icon">
+                <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
     </footer>
