--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -18,7 +18,22 @@
                 <a href="site-plan-rafting.html">Site Plan</a>
                 <a href="contactus.html">Contact Us</a>
 
-
+                <form action="/my-handling-form-page" method="post">
+                    <ul>
+                      <li>
+                        <label for="name">Name:</label>
+                        <input type="text" id="name" name="user_name" />
+                      </li>
+                      <li>
+                        <label for="mail">Email:</label>
+                        <input type="email" id="mail" name="user_email" />
+                      </li>
+                      <li>
+                        <label for="msg">Message:</label>
+                        <textarea id="msg" name="user_message"></textarea>
+                      </li>
+                    </ul>
+                  </form>
 
 
 
@@ -30,13 +45,13 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
             <a href="https://facebook.com" target="_blank">
-                <img src="facebook.png" alt="FaceBook icon">
+                <img src="images/facebook.png" alt="FaceBook icon">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="twitter.png" alt="Twitter icon">
+                <img src="images/twitter.png" alt="Twitter icon">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="instagram.png" alt="Instagram icon">
+                <img src="images/instagram.png" alt="Instagram icon">
             </a>
         </div>
     </footer>
