--- a/wwr/index.html
+++ b/wwr/index.html
@@ -13,7 +13,7 @@
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
-            <a href="home.html">Home</a>
+            <a href="index1.0.html">Home</a>
             <a href="fun_facts_about_white_water_rafting.html">Page 2</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
