--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
     <nav>
-        <a href="index1.0.html">Home</a>,
+        <a href="index.html">Home</a>,
         <a href="https://mayes007.github.io/wwd130/wwr/index.html">White Water Rafting Website</a>,
         <a href="https://mayes007.github.io/wwd130/wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>,
         <a href="positioning.html">Positioning Activity</a>,
