--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -24,7 +24,7 @@
     <h1>Contact Us</h1>
 
     <!-- Form -->
-    <form action="submit_form.php" method="POST">
+    <form action="my-handling-form-page" method="post">
       <label for="name">Name:</label>
       <input type="text" id="name" name="name" required><br><br>
 
