--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -22,7 +22,8 @@
 
   <main>
     <h1>Contact Us</h1>
-
+    <div id="feedback"></div>
+    
     <!-- Form -->
     <form action="my-handling-form-page" method="post">
       <label for="name">Name:</label>
