--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="em">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | Dry Oar Boating | Home</title>
-    <link rel="stylesheet" type="text/css" href="styles/style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us</title>
+  <style>
+   
+  </style>
+</head>
+<body>
 </head>
 <body>
     <header>
@@ -19,25 +22,29 @@
             <a href="contactus.html">Contact Us</a>
         </nav>
     </header>
-
+    <input type="text" value="Welcome to the contact page!" />
   <main>
     <h1>Contact Us</h1>
-    <div id="feedback"></div>
-    
-    <!-- Form -->
-    <form action="my-handling-form-page" method="post">
-      <label for="name">Name:</label>
-      <input type="text" id="name" name="name" required><br><br>
-
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required><br><br>
-
-      <label for="message">Message:</label><br>
-      <textarea id="message" name="message" rows="4" required></textarea><br><br>
-
-      <input type="submit" value="Submit">
-    </form>
-  </main>
+    <form action="/my-handling-form-page" method="post">
+    <ul>
+      <li>
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="user_name" />
+      </li>
+      <li>
+        <label for="mail">Email:</label>
+        <input type="email" id="mail" name="user_email" />
+      </li>
+      <li>
+        <label for="msg">Message:</label>
+        <textarea id="msg" name="user_message"></textarea>
+      </li>
+      </li>
+      <li class="button">
+        <button type="submit">Send your message</button>
+    </ul>
+  </form>
+  
 
   <footer>
     <p>Dry Oar © 2023 - Samantha Mayes</p>
@@ -57,3 +64,5 @@
 </footer>
 </body>
 </html>
+
+
