--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -88,6 +88,7 @@ button {
 
     </style>
 </head>
+<input type="text" value="by default this element is filled with this text" />
 <body>
     <header>
         <a id="logo_link" href="index.html">
@@ -101,7 +102,6 @@ button {
         </nav>
     </header>
     <div id="feedback"></div>
-   
     <form action="/my-handling-form-page" method="post">
       <ul>
         <li>
@@ -155,6 +155,3 @@ button {
       document.body.classList.toggle('moveDown');
   });
 </script>
-            
-</body>
-</html>
