--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -87,11 +87,11 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
-        <a href="#">Page4</a>
-        <a href="#">Page5</a>
+        <a href="personalfolderindex.html">Home</a>
+        <a href="Anakin's Younger Years">Page2</a>
+        <a href="Anakin's Apprentice Years">Page3</a>
+        <a href="Anikin turns to the Dark Side">Page4</a>
+        <a href="Quotes and Memorable Moments of Anakin Skywalker">Page5</a>
       </nav>
       <hr>
       Site Map
