--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -88,7 +88,9 @@ button {
 
     </style>
 </head>
-<input type="text" value="by default this element is filled with this text" />
+<textarea>
+  Hello by default this element is filled with this text! Thank you for your message we will get back to you as soon as possible.
+</textarea>
 <body>
     <header>
         <a id="logo_link" href="index.html">
