--- a/personal-folder/index.html
+++ b/personal-folder/index.html
@@ -1,65 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
-    <title>Home Page Wireframe</title>
+    <title>index.html</title>
+    <!-- You can add more meta tags, links to CSS, or scripts here -->
     <style>
-        /* Add some basic styling for better visualization */
+        /* You can add CSS styles here or link to an external CSS file */
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
         }
-
-        header, main, section, footer {
-            border: 1px solid #000;
-            margin: 10px;
+        header {
+            background-color: #7df9ff;
+            color: #040720 ;
             padding: 10px;
+            text-align: center;
         }
+        /* Add more styles for other elements as needed */
     </style>
 </head>
-
 <body>
     <header>
-        <!-- Header content -->
-        <h1>Header</h1>
+        <h1> How Anikan Skywalker is the Chosen One.</h1>
+              <a id="logo_link" href="index.html">
+            <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy..png" >
         <nav>
-            <ul>
-                <li><a href="personalfolderindex.html">Home</a></li>
-                <li><a href="Anakin's Younger Years">Page 2</a></li>
-                <li><a href="Anikins Apprentice Years">Page 3 </a></li>
-                <li><a href="Anikin turns to the Dark Side">Page 4</a></li>
-                <li><a href="Quotes and Memorable Moments of Anakin Skywalker">Page 5 </a></li>
-
-
-            </ul>
+                    <a href="index.html">Home</a>
+                    <a href="Anakin's Younger Years"> Page 2</a>
+                    <a href="Anakin's Apprentice Years">Page 3</a>
+                    <a href="Anikin turns to the Dark Side">Page 4</a>
+                    <a href="Quotes and Memorable Moments of Anakin Skywalker">Page 5</a>
+                <!-- Add more navigation links if needed -->
         </nav>
     </header>
 
     <main>
-        <!-- Main content -->
         <section>
-            <!-- Section 1 content -->
-            <h2>Section 1</h2>
-            <div>
-                <p> The Home page of this website serves as the gateway to an extensive exploration of Anikan Skywalker's life. It spans his entire timeline, from a young, innocent child to his eventual transformation into the formidable Darth Vader. This page introduces the website overarching narrative, offering a tantalizing preview of the journey ahead. It promises a comprehensive dive into the life of one of Star Wars' most iconic characters. Users can expect to uncover the pivotal moments that define Anakin's path, both visually and through engaging content. This page is adorned with two intriguing images, setting the tone for the captivating story that follows.</p>
-            </div>
-        </section>
-
-        <section>
-            <!-- Section 2 content -->
-            <h2>Section 2</h2>
-            <div>
-                <p>Content goes here...</p>
-            </div>
+            <h2>Home Page</h2>
+            <!-- Content specific to the home page goes here -->
+            <p> The Home page of this website serves as the gateway to an extensive exploration of Anikan Skywalker's life. It spans his entire timeline, from a young, innocent child to his eventual transformation into the formidable Darth Vader. This page introduces the website overarching narrative, offering a tantalizing preview of the journey ahead. It promises a comprehensive dive into the life of one of Star Wars' most iconic characters. Users can expect to uncover the pivotal moments that define Anakin's path, both visually and through engaging content. This page is adorned with two intriguing images, setting the tone for the captivating story that follows.</p>
         </section>
     </main>
 
     <footer>
-        <!-- Footer content -->
-        <p>Footer content goes here...</p>
+        <p>Anakin Skywalker &copy; 2023- Samantha Mayes. All rights reserved.</p>
+        <!-- Include the link to the site plan here -->
+        <a href="site-plan.html">Site Plan</a>
+            <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="facebook icon">
+            </a>
+            <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
     </footer>
 </body>
-
 </html>
