--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -51,7 +51,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#28587B]</td><td class="secondary">[#0E7C7B]</td><td class="accent1">[#53F4FF]</td><td class="accent2"></td>
+        <tr><td class="primary">[#7DF9FF]</td><td class="secondary">[#0E7C7B]</td><td class="accent1">[#53F4FF]</td><td class="accent2"></td>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
