--- a/personal-folder/index.html
+++ b/personal-folder/index.html
@@ -17,6 +17,9 @@
             padding: 10px;
             text-align: center;
         }
+        logo{ 
+
+        }
         /* Add more styles for other elements as needed */
     </style>
 </head>
@@ -40,6 +43,9 @@
             <h2>Home Page</h2>
             <!-- Content specific to the home page goes here -->
             <p> The Home page of this website serves as the gateway to an extensive exploration of Anikan Skywalker's life. It spans his entire timeline, from a young, innocent child to his eventual transformation into the formidable Darth Vader. This page introduces the website overarching narrative, offering a tantalizing preview of the journey ahead. It promises a comprehensive dive into the life of one of Star Wars' most iconic characters. Users can expect to uncover the pivotal moments that define Anakin's path, both visually and through engaging content. This page is adorned with two intriguing images, setting the tone for the captivating story that follows.</p>
+            <img src="image/download.jpeg" alt="image for homepage">
+            <img src="image/2dec3a78a0a562965cccbd8e3fc6f53a.jpg"  alt="image for homepage">
+            
         </section>
     </main>
 
@@ -48,13 +54,13 @@
         <!-- Include the link to the site plan here -->
         <a href="site-plan.html">Site Plan</a>
             <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="facebook icon">
+                <img src="image/facebook.png" alt="facebook icon">
             </a>
             <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
+                <img src="image/twitter.png" alt="twitter icon">
             </a>
             <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
+                <img src="image/instagram.png" alt="instagram icon">
     </footer>
 </body>
 </html>
