--- a/personal-folder/index.html
+++ b/personal-folder/index.html
@@ -17,42 +17,39 @@
             padding: 10px;
             text-align: center;
         }
-        logo{ 
-
+        /* Add styling for specific elements if needed */
+        .content {
+            text-align: center;
+            margin-top: 20px;
         }
+        .content img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+        }
+
+        
         /* Add more styles for other elements as needed */
     </style>
 </head>
 <body>
     <header>
-        <h1> How Anikan Skywalker is the Chosen One.</h1>
-              <a id="logo_link" href="index.html">
+        <h1>How Anikan Skywalker is the Chosen One.</h1>
+        <a id="logo_link" href="index.html">
             <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy..png" >
-        <nav>
-                    <a href="index.html">Home</a>
-                    <a href="Anakin's Younger Years"> Page 2</a>
-                    <a href="Anakin's Apprentice Years">Page 3</a>
-                    <a href="Anikin turns to the Dark Side">Page 4</a>
-                    <a href="Quotes and Memorable Moments of Anakin Skywalker">Page 5</a>
-                <!-- Add more navigation links if needed -->
-        </nav>
+        <!-- Add navigation or other header content if needed -->
     </header>
 
-    <main>
-        <section>
-            <h2>Home Page</h2>
-            <!-- Content specific to the home page goes here -->
-            <p> The Home page of this website serves as the gateway to an extensive exploration of Anikan Skywalker's life. It spans his entire timeline, from a young, innocent child to his eventual transformation into the formidable Darth Vader. This page introduces the website overarching narrative, offering a tantalizing preview of the journey ahead. It promises a comprehensive dive into the life of one of Star Wars' most iconic characters. Users can expect to uncover the pivotal moments that define Anakin's path, both visually and through engaging content. This page is adorned with two intriguing images, setting the tone for the captivating story that follows.</p>
-            <img src="image/download.jpeg" alt="image for homepage">
-            <img src="image/2dec3a78a0a562965cccbd8e3fc6f53a.jpg"  alt="image for homepage">
-            
-        </section>
+    <main class="content">
+        <img src="image/download.jpeg" alt="First Image for home page">
+        <p> The Home page of this website serves as the gateway to an extensive exploration of Anikan Skywalker's life. It spans his entire timeline, from a young, innocent child to his eventual transformation into the formidable Darth Vader. This page introduces the website overarching narrative, offering a tantalizing preview of the journey ahead. It promises a comprehensive dive into the life of one of Star Wars' most iconic characters. Users can expect to uncover the pivotal moments that define Anakin's path, both visually and through engaging content. This page is adorned with two intriguing images, setting the tone for the captivating story that follows.</p>
+        <img src="image/2dec3a78a0a562965cccbd8e3fc6f53a.jpg" alt="Second Image for home page">
     </main>
 
     <footer>
-        <p>Anakin Skywalker &copy; 2023- Samantha Mayes. All rights reserved.</p>
-        <!-- Include the link to the site plan here -->
-        <a href="site-plan.html">Site Plan</a>
+        <p>Anakin Skywalker&copy; 2023- Samantha Mayes All rights reserved.</p>
+        <!-- You can add the link to the site plan or other footer content here -->
+            <a href="site-plan.html">Site Plan</a>
             <a href="https://facebook.com" target="_blank">
                 <img src="image/facebook.png" alt="facebook icon">
             </a>
@@ -61,6 +58,7 @@
             </a>
             <a href="https://instagram.com" target="_blank">
                 <img src="image/instagram.png" alt="instagram icon">
+    </footer>
     </footer>
 </body>
 </html>
