--- a/personal-folder/index.html
+++ b/personal-folder/index.html
@@ -37,6 +37,14 @@
         <h1>How Anikan Skywalker is the Chosen One.</h1>
         <a id="logo_link" href="index.html">
             <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy..png" >
+        </a>
+            <nav>
+                <a href="index.html" >Home</a>
+                <a href="Anakin's Younger Years"> Page 2</a>
+                <a href="Anakin's Apprentice Years.html">Page 3</a>
+                <a href="Anikin turns to the Dark Side.html">Page 4</a>
+                <a href="Quotes and Memorable Moments of Anakin Skywalker.html">Page 5</a>
+            </nav>
         <!-- Add navigation or other header content if needed -->
     </header>
 
