--- a/personal-folder/index.html
+++ b/personal-folder/index.html
@@ -40,10 +40,10 @@
         </a>
             <nav>
                 <a href="index.html" >Home</a>
-                <a href="Anakin's Younger Years"> Page 2</a>
-                <a href="Anakin's Apprentice Years.html">Page 3</a>
-                <a href="Anikin turns to the Dark Side.html">Page 4</a>
-                <a href="Quotes and Memorable Moments of Anakin Skywalker.html">Page 5</a>
+                <a href="anakin's_younger_years.html"> Page 2</a>
+                <a href="anakin's_apprentice_years.html">Page 3</a>
+                <a href="anikin_turns_to_the_dark_side.html">Page 4</a>
+                <a href="quotes_and_memorable_moments_of_anakin_skywalker.html">Page 5</a>
             </nav>
         <!-- Add navigation or other header content if needed -->
     </header>
