--- a/personal-folder/anikan_skywalker_index.html
+++ b/personal-folder/anikan_skywalker_index.html
@@ -35,11 +35,11 @@
 <body>
     <header>
         <h1>How Anikan Skywalker is the Chosen One.</h1>
-        <a id="logo_link" href="index.html">
+        <a id="logo_link" href="anikan_skywalker_index.html">
             <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy..png" >
         </a>
             <nav>
-                <a href="index.html" >Home</a>
+                <a href="anikan_skywalker_index.html" >Home</a>
                 <a href="anakin's_younger_years.html"> Page 2</a>
                 <a href="anakin's_apprentice_years.html">Page 3</a>
                 <a href="anikin_turns_to_the_dark_side.html">Page 4</a>
