--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -87,7 +87,7 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="personalfolderindex.html">Home</a>
+        <a href="anikan_skywalker_index.html">Home</a>
         <a href="Anakin's Younger Years">Page2</a>
         <a href="Anakin's Apprentice Years">Page3</a>
         <a href="Anikin turns to the Dark Side">Page4</a>
