--- a/personal-folder/anikin_turns_to_the_dark_side.html
+++ b/personal-folder/anikin_turns_to_the_dark_side.html
@@ -37,7 +37,7 @@
         <h1>How Anikan Skywalker is the Chosen One.</h1>
         <h2>Anikin Turn to the Dark Side</h2>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy..png" >
+            <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy.png" >
         </a>
             <nav>
                 <a href="anikan_skywalker_index.html" >Home</a>
