--- a/wwr/index1.html
+++ b/wwr/index1.html
@@ -9,8 +9,8 @@
             <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
-            <a href="index1.0.html">Home</a>
-            <a href="#">Page 2</a>
+            <a href="index1.html">Home</a>
+            <a href="fun_facts_about_white_water_rafting.html">Page 2</a>
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
