--- a/personal-folder/anikan_skywalker_index.html
+++ b/personal-folder/anikan_skywalker_index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index.html</title>
+    <link rel="stylesheet" type="text/css" href="styles/site-plan.css">
     <!-- You can add more meta tags, links to CSS, or scripts here -->
     <style>
         /* You can add CSS styles here or link to an external CSS file */
@@ -28,12 +29,13 @@
             margin-bottom: 20px;
             
         }
-
-
-
-
-        
-        /* Add more styles for other elements as needed */
+        .grid {
+            display: grid;
+            grid-template-columns: 150px auto 150px;
+            grid-template-rows: repeat(3, 100px);
+             grid-gap: 1em;
+        }
+ /* Add more styles for other elements as needed */
     </style>
 </head>
 <body>
