--- a/wwr/index.html
+++ b/wwr/index.html
@@ -14,11 +14,12 @@
         </a>
 
         </div>
-        <div class="menu">
-            <a href="index.html">Home</a>
+        <nav>
+            <a href="index1.html">Home</a>
             <a href="fun_facts_about_white_water_rafting.html">Page 2</a>
-            <a href="site-plan-rafting.html">Site-Plan</a>
-            <a href="contactus.html">Contact</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
+        </nav>
            
         </div>
     </div>
