--- a/personal-folder/anikin_turns_to_the_dark_side.html
+++ b/personal-folder/anikin_turns_to_the_dark_side.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index.html</title>
+    <link rel="stylesheet" type="text/css" href="styles/site-plan.css">
     <!-- You can add more meta tags, links to CSS, or scripts here -->
     <style>
         /* You can add CSS styles here or link to an external CSS file */
