--- a/personal-folder/site-plan.html
+++ b/personal-folder/site-plan.html
@@ -4,7 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+    <link rel="stylesheet" type="text/css" href="styles/site-plan.css">
+    
     
   </head>
 
