--- a/wwr/fun_facts_about_white_water_rafting.html
+++ b/wwr/fun_facts_about_white_water_rafting.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fun Facts About White Water Rafting | Dry Oar Boating | page 2</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <header>
