--- a/personal-folder/quotes_and_memorable_moments_of_anakin_skywalker.html
+++ b/personal-folder/quotes_and_memorable_moments_of_anakin_skywalker.html
@@ -35,16 +35,16 @@
 </head>
 <body>
     <header>
-        <h1>How Anikan Skywalker is the Chosen One.</h1>
+        <h1>How Anakin Skywalker is the Chosen One.</h1>
         <h2>Quotes and Memorable Moments of Anakin Skywalker</h2>
         <a id="logo_link" href="index.html">
             <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy.png" >
         </a>
             <nav>
-                <a href="anikan_skywalker_index.html" >Home</a>
+                <a href="anakin_skywalker_index.html" >Home</a>
                 <a href="anakin's_younger_years.html"> Page 2</a>
                 <a href="anakin's_apprentice_years.html">Page 3</a>
-                <a href="anikin_turns_to_the_dark_side.html">Page 4</a>
+                <a href="anakin_turns_to_the_dark_side.html">Page 4</a>
                 <a href="quotes_and_memorable_moments_of_anakin_skywalker.html">Page 5</a>
             </nav>
         <!-- Add navigation or other header content if needed -->
