--- a/personal-folder/anakin_skywalker_index.html
+++ b/personal-folder/anakin_skywalker_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index.html</title>
-    <link rel="stylesheet" type="text/css" href="site-plan.html"
+    <link rel="stylesheet" type="text/css" href="site-plan.html">
    
     <!-- You can add more meta tags, links to CSS, or scripts here -->
     <style>
@@ -36,7 +36,7 @@ header {
 }
 
 .grid-container img {
-  max-width: 100%;
+  max-width: 10%;
   height: auto;
   margin-bottom: 20px;
 }
