--- a/personal-folder/anakin_skywalker_index.html
+++ b/personal-folder/anakin_skywalker_index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>index.html</title>
-    <link rel="stylesheet" type="text/css" href="site-plan.html">
+    <link rel="stylesheet" type="text/css" href="styles/site-plan.css">
    
     <!-- You can add more meta tags, links to CSS, or scripts here -->
     <style>
@@ -19,7 +19,7 @@ body {
 header {
   background-color: #7df9ff;
   color: #040720 ;
-  padding: 10px;
+  padding: 50px;
   text-align: center;
 }
 
@@ -28,10 +28,6 @@ header {
   margin-top: 20px;
 }
 
-
-        
-
-        
         /* Add more styles for other elements as needed */
     </style>
 </head>
