--- a/personal-folder/anakin_skywalker_index.html
+++ b/personal-folder/anakin_skywalker_index.html
@@ -12,7 +12,7 @@
 
 body {
   font-family: Arial, sans-serif;
-  margin: 50;
+  margin: 0 auto;
   padding: 0;
 }
 
@@ -25,7 +25,7 @@ header {
 
 .content {
   text-align: center;
-  margin-top: 0px;
+  margin-top: 50px;
 }
 
         /* Add more styles for other elements as needed */
