--- a/personal-folder/anakin_turns_to_the_dark_side.html
+++ b/personal-folder/anakin_turns_to_the_dark_side.html
@@ -9,7 +9,7 @@
         /* You can add CSS styles here or link to an external CSS file */
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
+            margin: 0 auto;
             padding: 0;
         }
         header {
