--- a/personal-folder/anakin_skywalker_index.html
+++ b/personal-folder/anakin_skywalker_index.html
@@ -4,37 +4,63 @@
     <meta charset="UTF-8">
     <title>index.html</title>
     <link rel="stylesheet" type="text/css" href="styles/site-plan.css">
-   
-    <!-- You can add more meta tags, links to CSS, or scripts here -->
     <style>
-        /* You can add CSS styles here or link to an external CSS file */
-      /* External CSS file */
+        /* CSS styles */
+        /* ... Your existing CSS styles ... */
 
-body {
-  font-family: Arial, sans-serif;
-  margin: 0 auto;
-  padding: 0;
-}
+        /* Two-column layout styles */
+        .container {
+            display: flex;
+            justify-content: center;
+            align-items: flex-start;
+            flex-wrap: wrap;
+            margin-top: 20px;
+        }
 
-header {
-  background-color: #7df9ff;
-  color: #041720 ;
-  padding: 25px;
-  text-align: center;
-}
+        .column {
+            width: 45%;
+            margin: 10px;
+            padding: 10px;
+            background-color: #f9f9f9;
+            border-radius: 5px;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
 
-.content {
-  text-align: center;
-  margin-top: 50px;
-}
+        .column img {
+            max-width: 100%;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0 auto;
+            padding: 0;
+        }
+        header {
+            background-color: #7df9ff;
+            color: #040720 ;
+            padding: 10px;
+            text-align: center;
+        }
+        /* Add styling for specific elements if needed */
+        .content {
+            text-align: center;
+            margin-top: 20px;
+        }
+        .content img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+        }
 
-        /* Add more styles for other elements as needed */
+        /* Additional styles as needed */
     </style>
 </head>
 <body>
     <header>
-        <h1>How Anakin Skywalker is the Chosen One.</h1>
-        <a id="logo_link" href="anakin_skywalker_index.html">
+        <h1>How Anikan Skywalker is the Chosen One.</h1>
+        
+        <a id="logo_link" href="index.html">
             <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy.png" >
         </a>
             <nav>
@@ -48,11 +74,20 @@ header {
     </header>
 
     <main class="content">
-        <img src="image/download.jpeg" alt="First Image for home page">
-        <p> The Home page of this website serves as the gateway to an extensive exploration of Anikan Skywalker's life. It spans his entire timeline, from a young, innocent child to his eventual transformation into the formidable Darth Vader. This page introduces the website overarching narrative, offering a tantalizing preview of the journey ahead. It promises a comprehensive dive into the life of one of Star Wars' most iconic characters. Users can expect to uncover the pivotal moments that define Anakin's path, both visually and through engaging content. This page is adorned with two intriguing images, setting the tone for the captivating story that follows.</p>
-        <img src="image/2dec3a78a0a562965cccbd8e3fc6f53a.jpg" alt="Second Image for home page">
+        <div class="container">
+            <div class="column">
+                <img src="image/download.jpeg" alt="First Image for home page">
+                <p> The Home page of this website serves as the gateway to an extensive exploration of Anikan Skywalker's life. It spans his entire timeline, from a young, innocent child to his eventual transformation into the formidable Darth Vader. This page introduces the website overarching narrative, offering a tantalizing preview of the journey ahead. It promises a comprehensive dive into the life of one of Star Wars' most iconic characters. Users can expect to uncover the pivotal moments that define Anakin's path, both visually and through engaging content. This page is adorned with two intriguing images, setting the tone for the captivating story that follows.</p>
+            </div>
+            <div class="column">
+                <img src="image/2dec3a78a0a562965cccbd8e3fc6f53a.jpg" alt="Second Image for home page">
+                <p>Anakin Skywalker's status as the Chosen One in the Star Wars universe is a key prophecy that plays a significant role in his character's arc. The prophecy, introduced in the prequel trilogy of Star Wars, foretells the arrival of a being with the potential to bring balance to the Force.
+
+                    The prophecy is described as follows: "A Chosen One will come, born of no father, and through him will ultimate balance in the Force be restored."</p>
+            </div>
+        </div>
     </main>
-   
+    
     <footer>
         <p>Anakin Skywalker&copy; 2023- Samantha Mayes All rights reserved.</p>
         <!-- You can add the link to the site plan or other footer content here -->
@@ -66,6 +101,8 @@ header {
             <a href="https://instagram.com" target="_blank">
                 <img src="image/instagram.png" alt="instagram icon">
     </footer>
-    </footer>
+</body>
+</html>
+
 </body>
 </html>
