--- a/personal-folder/anakin_turns_to_the_dark_side.html
+++ b/personal-folder/anakin_turns_to_the_dark_side.html
@@ -62,7 +62,7 @@
         <h2>Anikan Turn to the Dark Side </h2>
         
         <a id="logo_link" href="index.html">
-            <img class="logo" src="image/Anakin Skywalker The Chosen One's Legacy.png" >
+            <img class="logo" src="image/" alt="Anakin Skywalker - The Chosen One's Legacy">
         </a>
             <nav>
                 <a href="anakin_skywalker_index.html" >Home</a>
