--- a/personal-folder/anakin_skywalker_index.html
+++ b/personal-folder/anakin_skywalker_index.html
@@ -15,7 +15,7 @@
             <nav>
                 <a href="anakin_skywalker_index.html">Home</a>
                 <a href="anakin's_younger_years.html">Page 2</a>
-                <a href="anakins_apprentice_years.html">Page 3</a>
+                <a href="anakin's_apprentice_years.html">Page 3</a>
                 <a href="anakin_turns_to_the_dark_side.html">Page 4</a> 
                 <a href="quotes_of_anakin_skywalker_and_darth_vader.html">Page 5</a>
             </nav>
