--- a/personal-folder/quotes_of_anakin_skywalker_and_darth_vader.html
+++ b/personal-folder/quotes_of_anakin_skywalker_and_darth_vader.html
@@ -52,6 +52,7 @@
           <p>"I am altering the dearl. Pray I don't alter it any further.-Star Wars Episode V: The empire Strikes Back</p>
           <p>"Be careful not to choke on your aspirations"</p>
           <p>"You have controlled your fear. Now, release your anger. Only your hatred can destroy me."- Star Wars Episode V: The Empire Strikes Back </p>
+          <p>"WHen I left you, I was but the learner. Now I am the master."-Star wars Episode IV: A New Hope.</p>
         </div>
         </div>
      
